[tool.poetry]
name = "course-work-5-db"
version = "0.1.0"
description = ""
authors = ["Roman Slobolinsky <rslobolinsky13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
